fix: Fix contrast issues

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -87,7 +87,7 @@ $disabled-input-height: 22px;
 	--subtle-accent: var(--gray-50);
 	--subtle-fg: var(--gray-100);
 	--navbar-bg: white;
-	--fg-hover-color: var(--gray-100);
+	--fg-hover-color: var(--highlight-color);
 	--card-bg: var(--fg-color);
 	--disabled-text-color: var(--gray-700);
 	--disabled-control-bg: var(--gray-50);
