--- a/frappe/public/scss/desk/frappe_datatable.scss
+++ b/frappe/public/scss/desk/frappe_datatable.scss
@@ -4,7 +4,7 @@
 	--dt-light-red: var(--red-50);
 	--dt-light-yellow: var(--yellow-50);
 	--dt-orange: var(--orange-500);
-	--dt-text-color: var(--text-muted);
+	--dt-text-color: var(--text-color);
 	--dt-text-light: var(--text-light);
 	--dt-spacer-1: 0.25rem;
 	--dt-spacer-2: var(--padding-xs);
